Added hover effect to my navigation bar

--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
             <a href="Interest 2">Interest page 2</a> 
             <a href="Contact form">Contact form</a> 
         </nav>
-        <centre><h1>Dawid Nikodem home page</h1></centre>
-        <p>
-            Hellp here i will be showing the main page 
-        </p>
+        <h1 style="text-align: center;">Dawid Nikodem Website </h1>
+        <p> Hellp here i will be showing the main page </p>
         <p>
             Maybe i will be havign moving picture 
         </p>
